@@ -291,6 +291,9 @@ Extension Modules
 Library
 -------
 
+- bpo-29901: The zipapp module now supports general path-like objects, not
+  just pathlib.Path.
+
 - bpo-25803: Avoid incorrect errors raised by Path.mkdir(exist_ok=True)
   when the OS gives priority to errors such as EACCES over EEXIST.
 
